--- a/Exam_AdoNet_solution/Exam_AdoNet/Views/OrderItems/Index.cshtml
+++ b/Exam_AdoNet_solution/Exam_AdoNet/Views/OrderItems/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Good)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Quantity)
         </th>
         <th></th>
@@ -19,6 +22,9 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Good, "GoodTemplate")
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Quantity)
         </td>
