--- a/Exam_AdoNet_solution/Exam_AdoNet/Views/OrderItems/Edit.cshtml
+++ b/Exam_AdoNet_solution/Exam_AdoNet/Views/OrderItems/Edit.cshtml
@@ -20,10 +20,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })   
                 @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
             </div>
-        </div>
+                @Html.LabelFor(model => model.Good, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                <div class="col-md-10">
+                                   
+                    @Html.DisplayFor(model => model.Good, "GoodTemplate", new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
