little corrected css in Lofin Pannel

--- a/NaKaremati/NaKaremati_solution/NaKaremati/Views/Shared/_Layout.cshtml
+++ b/NaKaremati/NaKaremati_solution/NaKaremati/Views/Shared/_Layout.cshtml
@@ -18,17 +18,13 @@
             <li>@Html.ActionLink("Be our partners", "BePartners", "Home", new { area = "" }, null)</li>
             @Html.Partial("_LoginPartial")
         </ul>
-       
-       
     </div> 
-  
-    
     
 
     @RenderBody()
   
     <footer>
-        <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <p>&copy; 2016 - @DateTime.Now.Year - #NaKaremati</p>
     </footer>
 
 
